snapshots/syntax/library/statements/midb/midb_preserves_whitespace.snap
---
source: src/syntax/library/statements/string_manipulation/midb.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: MidBStatement
      children:
        - kind: MidBKeyword
          text: MidB
        - kind: Whitespace
          text: "  "
        - kind: LeftParenthesis
          text: (
        - kind: Whitespace
          text: "  "
        - kind: Identifier
          text: myString
        - kind: Whitespace
          text: "  "
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: "  "
        - kind: IntegerLiteral
          text: "3"
        - kind: Whitespace
          text: "  "
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: "  "
        - kind: IntegerLiteral
          text: "2"
        - kind: Whitespace
          text: "  "
        - kind: RightParenthesis
          text: )
        - kind: Whitespace
          text: "  "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: "  "
        - kind: StringLiteral
          text: "\"XX\""
        - kind: Whitespace
          text: "    "
        - kind: Newline
          text: "\n"
