snapshots/syntax/library/statements/midb/midb_simple.snap
---
source: src/syntax/library/statements/string_manipulation/midb.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: MidBStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: MidBKeyword
                  text: MidB
                - kind: LeftParenthesis
                  text: (
                - kind: TextKeyword
                  text: text
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: IntegerLiteral
                  text: "5"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: IntegerLiteral
                  text: "3"
                - kind: RightParenthesis
                  text: )
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: StringLiteral
                  text: "\"abc\""
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
